Add-filter and paginations

--- a/EndProjectOrgani/Views/Blog/BlogPage.cshtml
+++ b/EndProjectOrgani/Views/Blog/BlogPage.cshtml
@@ -1,5 +1,9 @@
-﻿@model List<Blog>
-
+﻿@using EndProjectOrgani.ViewModels.Admin.BlogViewModels
+@using EndProjectOrgani.Utilities.Paginations
+@model Paginate<Blog>
+@{
+    ViewData["Title"] = "Blog Page";
+}
 
 
 <link rel="stylesheet" href="~/MemberPanel/assets/sass/blog.css">
@@ -33,7 +37,7 @@
 
                 <div class="col-lg-8 col-sm-12">
                     <div class="row">
-                        @foreach (var blog in Model)
+                        @foreach (var blog in Model.Datas)
                         {
                             <div class="col-lg-6 col-sm-12">
                                 <div class="blog-img">
@@ -42,11 +46,10 @@
 
                                 <div class="date-comment">
                                     <span class="date"><i class="fas fa-calendar"></i> @blog.CreatedDate.ToString("dd MMMM yyyy")</span>
-
                                 </div>
 
                                 <div class="blog-title">
-                                    <p> <a href="#">@blog.Title</a> </p>
+                                    <p> <a asp-action="BlogDetailsPage" asp-controller="Blog" asp-route-id="@blog.Id">@blog.Title</a> </p>
                                 </div>
 
                                 <div class="blog-content">
@@ -61,7 +64,24 @@
                             </div>}
 
 
-                    
+                        <div class="row my-3 justify-content-center">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination ">
+                                    <li class="page-item @(Model.HasPrevious ? "": "disabled")">
+                                        <a class="page-link" asp-action="BlogPage" asp-area="" asp-route-page="@(Model.CurrentPage-1)">Previous</a>
+                                    </li>
+                                    @for (int i = 1; i <= Model.TotalPage; i++)
+                                    {
+                                        <li class="page-item @(i == Model.CurrentPage ? "disabled" : "")">
+                                            <a class="page-link" asp-action="BlogPage" asp-area="" asp-route-page="@i">@i</a>
+                                        </li>
+                                    }
+                                    <li class="page-item @(Model.HasNext ? "": "disabled")">
+                                        <a class="page-link" asp-action="BlogPage" asp-area="" asp-route-page="@(Model.CurrentPage+1)">Next</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
 
 
                     </div>
