--- a/EndProjectOrgani/Views/Product/ProductPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductPage.cshtml
@@ -1,7 +1,9 @@
-﻿@model  Paginate<ProductVM> 
-@*@model List<Product>*@
-@using EndProjectOrgani.ViewModels.Admin.ProductViewModels
+﻿@using EndProjectOrgani.ViewModels.Admin.ProductViewModels
 @using EndProjectOrgani.Utilities.Paginations
+@model Paginate<ProductVM>
+@{
+    ViewData["Title"] = "Products Page";
+}
 
 @{
     int count = ((Model.CurrentPage - 1) * 10) + 1;
@@ -43,19 +45,10 @@
                         </div>
 
                         <div class="sort-by-product-count">
-                            <div class="sortby">
-                                <span>Sort By</span>
-                                <button id="default">Default <i class="fas fa-angle-down" id="icon"></i></button>
-                                <div class="sort-content">
-                                    <a href="#">Default</a>
-                                    <a href="#">Name</a>
-                                    <a href="#">Price</a>
-
-                                </div>
-                            </div>
+                            @await Component.InvokeAsync("SortByOrder", new { @action = "ProductPage" })
 
                             <div class="product-count">
-                                <span style="color: rgba(0,0,0,1)">@Model.Datas.Count</span> <span>Products found</span>
+                                <span style="color: rgba(0,0,0,1)">@ViewBag.AllProducts</span> <span>Products found</span>
                             </div>
                         </div>
 
@@ -76,7 +69,7 @@
                                                     <a href="" id="addproduct"> <i class="fas fa-shopping-cart"></i></a>
                                                 </div>
                                                 <div class="detail-icon">
-                                                    <a asp-controller="Product" asp-action="ProductDetailsPage"  asp-route-id="@product.Id"> <i class="fas fa-info"></i></a>
+                                                    <a asp-controller="Product" asp-action="ProductDetailsPage" asp-route-id="@product.Id"> <i class="fas fa-info"></i></a>
                                                 </div>
                                             </div>
                                             <div class="name">
@@ -89,8 +82,6 @@
                                     </div>
                                 }
 
-
-
                             </div>
                         </div>
 
@@ -98,22 +89,20 @@
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination ">
                                     <li class="page-item @(Model.HasPrevious ? "": "disabled")">
-                                        <a class="page-link"  asp-action="ProductPage" asp-area="" asp-route-page="@(Model.CurrentPage-1)">Previous</a>
+                                        <a class="page-link" asp-action="ProductPage" asp-area="" asp-route-page="@(Model.CurrentPage-1)">Previous</a>
                                     </li>
                                     @for (int i = 1; i <= Model.TotalPage; i++)
                                     {
                                         <li class="page-item @(i == Model.CurrentPage ? "disabled" : "")">
-                                            <a class="page-link"  asp-action="ProductPage" asp-area="" asp-route-page="@i">@i</a>
+                                            <a class="page-link" asp-action="ProductPage" asp-area="" asp-route-page="@i">@i</a>
                                         </li>
                                     }
-
                                     <li class="page-item @(Model.HasNext ? "": "disabled")">
-                                        <a class="page-link"  asp-action="ProductPage" asp-area="" asp-route-page="@(Model.CurrentPage+1)">Next</a>
+                                        <a class="page-link" asp-action="ProductPage" asp-area="" asp-route-page="@(Model.CurrentPage+1)">Next</a>
                                     </li>
                                 </ul>
                             </nav>
                         </div>
-
 
 
                     </div>
