--- a/EndProjectOrgani/Views/Account/SignUp.cshtml
+++ b/EndProjectOrgani/Views/Account/SignUp.cshtml
@@ -17,8 +17,8 @@
             <form asp-action="SignUp" asp-controller="Account" method="post">
                 <input class="text" asp-for="Username" placeholder="Username" required="">
                 <input class="text email" asp-for="Email" placeholder="Email" required="">
-                <input class="text" asp-for="Password" placeholder="Password" required="">
-                <input class="text w3lpass" asp-for="ConfrimPassword" placeholder="Confirm Password" required="">
+                <input type="password" class="text" asp-for="Password" placeholder="Password" required="">
+                <input type="password" class="text w3lpass" asp-for="ConfrimPassword" placeholder="Confirm Password" required="">
                 <div asp-validation-summary="All" style="color:red;">
 
                 </div>
