--- a/EndProjectOrgani/Views/Product/ProductCategoryPage.cshtml
+++ b/EndProjectOrgani/Views/Product/ProductCategoryPage.cshtml
@@ -1,8 +1,9 @@
-﻿@model Paginate<ProductVM>
-@using EndProjectOrgani.ViewModels.Admin.ProductViewModels
+﻿@using EndProjectOrgani.ViewModels.Admin.ProductViewModels
 @using EndProjectOrgani.Utilities.Paginations
+@model Paginate<ProductVM>
 
 @{
+    ViewData["Title"] = "Products Page";
     int count = ((Model.CurrentPage - 1) * 10) + 1;
 }
 
@@ -42,19 +43,10 @@
                         }
 
                         <div class="sort-by-product-count">
-                            <div class="sortby">
-                                <span>Sort By</span>
-                                <button id="default">Default <i class="fas fa-angle-down" id="icon"></i></button>
-                                <div class="sort-content">
-                                    <a href="#">Default</a>
-                                    <a href="#">Name</a>
-                                    <a href="#">Price</a>
-
-                                </div>
-                            </div>
+                            @await Component.InvokeAsync("SortByOrder", new { @action = "ProductCategoryPage" })
 
                             <div class="product-count">
-                                <span style="color: rgba(0,0,0,1)">@Model.Datas.Count</span> <span>Products found</span>
+                                <span style="color: rgba(0,0,0,1)">@ViewBag.AllProducts</span> <span>Products found</span>
                             </div>
                         </div>
 
